tests/lean/structure_instance_bug2.lean.expected.out
structure_instance_bug2.lean:4:0: error: invalid structure instance, 'default_smt_pre_config' is not the name of a structure type
